7.3.0:

Improvements :

* Fixed SXRenderer tests to account for new noise algorithm in 3delight.

* ToMayaMeshConverter now converts all UV sets when converting to mesh data (through a plug). Previous behaviour only worked for shapes.

* ToMayaGroupConverter now uses a group's "name" attribute to name the converted transform.

* FnProceduralHolder.convertToGeometry() now removes useless childless transforms.

Bug Fixes :

* ToMayaMeshConverter no longer duplicates the default UV set when converting to a shape.

* Fixed threading bug in LRU cache, possibly leading to a crash if clear() was called while a read was happening

* Fixed bugs with the JPEGImageWriter, DPXImageWriter and CINImageWriter classes where they would segfault when the data window was different to the display window.

* Fixed bugs with the JPEGImageWriter, DPXImageWriter and CINImageWriter classes where the data window they would output was wrong.

Additions :

* Added new 'culling' option to the ieProceduralHolder's display options, so the user can choose back face, front face or no culling

* Added new test cases for JPEGImageWriter, DPXImageWriter and CINImageWriter. The new case tests the writing of images with data windows that are different to the display window.

7.2.0:

Additions :

* Added MeshFaceFilterOp for pruning faces on MeshPrimitives.

* Added a ClampOp, for clamping values in ImagePrimitives.

* Added IECoreArnold::UniverseBlock, for managing AiBegin/AiEnd pairs.

* Added SWAReader, for reading Speed Tree forest files.

* Added IECoreMaya::ToMayaCameraConverter, which supports the same attributes as IECoreMaya::FromMayaCameraConverter

* Added bindings for Imf::TimeCode

* Added IECore::TimeCodeData and TimeCodeParameter

Improvements :

* IECoreMaya::ToMayaSkinClusterConverter has a new parameter to ignore the bindPose node
