@@ -5,6 +5,8 @@
 //  Copyright 2010 Dr D Studios Pty Limited (ACN 127 184 954) (Dr. D Studios),
 //  its affiliates and/or its licensors.
 //
+//  Copyright (c) 2012, John Haddon. All rights reserved.
+//
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
 //  met:
@@ -406,7 +408,8 @@ enum TypeId
 	MeshFaceFilterOpTypeId = 360,
 	TimeCodeDataTypeId = 361,
 	TimeCodeParameterTypeId = 362,
-
+	OptionsTypeId = 363,
+	
 	// Remember to update TypeIdBinding.cpp !!!
 
 	// If we ever get this far then the core library is too big.
