@@ -5,6 +5,8 @@
 //  Copyright 2010 Dr D Studios Pty Limited (ACN 127 184 954) (Dr. D Studios),
 //  its affiliates and/or its licensors.
 //
+//  Copyright (c) 2012, John Haddon. All rights reserved.
+//
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
 //  met:
@@ -307,6 +309,7 @@
 #include "IECorePython/ImfBinding.h"
 #include "IECorePython/TimeCodeDataBinding.h"
 #include "IECorePython/TimeCodeParameterBinding.h"
+#include "IECorePython/OptionsBinding.h"
 
 #include "IECore/IECore.h"
 
@@ -619,6 +622,7 @@ BOOST_PYTHON_MODULE(_IECore)
 	bindImf();
 	bindTimeCodeData();
 	bindTimeCodeParameter();
+	bindOptions();
 
 	def( "majorVersion", &IECore::majorVersion );
 	def( "minorVersion", &IECore::minorVersion );
